syntax = "proto3";

option go_package = "v1";
option java_package = "stackrox.generated";

import weak "google/api/annotations.proto";
import "api/v1/common.proto";
import "api/v1/empty.proto";

package v1;

enum ServiceType {
    UNKNOWN_SERVICE           = 0;
    SENSOR_SERVICE            = 1;
    CENTRAL_SERVICE           = 2;
    REMOTE_SERVICE            = 3;
    COLLECTOR_SERVICE         = 4;
    MONITORING_UI_SERVICE     = 5;
    MONITORING_DB_SERVICE     = 6;
    MONITORING_CLIENT_SERVICE = 7;
}

message ServiceIdentity {
    int64       serial   = 1;
    string      id       = 2;
    ServiceType type     = 3;
}

message ServiceIdentityResponse {
    repeated ServiceIdentity identities = 1;
}

message CreateServiceIdentityRequest {
    string      id = 1;
    ServiceType type = 2;
}

message CreateServiceIdentityResponse {
    ServiceIdentity identity       = 1;
    bytes          certificate_pem = 2;
    bytes          private_key_pem = 3;
}

message Authority {
    bytes certificate_pem = 1;
}

message Authorities {
    repeated Authority authorities = 1;
}

service ServiceIdentityService {

    rpc GetServiceIdentities (Empty) returns (ServiceIdentityResponse) {
        option (google.api.http) = {
            get: "/v1/serviceIdentities"
        };
    }

    // CreateServiceIdentity creates a new key pair and certificate.
    // The key and certificate are not retained and can never be retrieved again.
    rpc CreateServiceIdentity (CreateServiceIdentityRequest) returns (CreateServiceIdentityResponse) {
        option (google.api.http) = {
            post: "/v1/serviceIdentities"
            body: "*"
        };
    }

    // GetAuthorities returns the authorities currently in use.
    rpc GetAuthorities (Empty) returns (Authorities) {
        option (google.api.http) = {
            get: "/v1/authorities"
        };
    }
}

